# todo-cli

./: .pre-commit-config.yaml  LICENSE  README.md  README_PRECOMMIT.md  ReadmeCodeAnalysis.md  logging_config.py  pyproject.toml
docs/source/: conf.py
docs/tutorials/: tutorial.md
tests/: test_models.py  test_models_deadline.py  test_storage.py  test_storage_behaviour.py
todo_cli/: main.py  models.py  storage.py
