[tool.poetry]
name = "todo-cli"
version = "0.1.0"
description = "Gestionnaire de tâches en ligne de commande"
authors = ["Aymane <aymanelhachimi2004@gmail.com>"]
readme = "README.md"
packages = [{ include = "todo_cli" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "*"
rich = "*"
pydantic = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
ruff = "^0.14.8"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["dist", ".venv", ".git", "__pycache__"]

[tool.ruff.lint]
extend-select = ["I"]  

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

